--- a/css/styles.css
+++ b/css/styles.css
@@ -3,13 +3,16 @@ h1 {
   margin: 0.7rem 0;
 }
 h2 {
-  font-size: 1.5rem;
-  margin: 0.5rem 0;
+  font-size: 1.3rem;
+  font-weight:600;
+  margin: 2.5rem 0 1rem 0;
 }
+
 h3 {
   font-size: 1.2rem;
-  margin: 0.3rem 0;
-  font-weight: 600;
+  margin: 1.5rem 0 0.5rem 0;
+  font-weight: 400;
+  font-style: italic;
 }
 
 p {
